--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                     <h2 class="section-title">Get In Touch</h2>
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 contact-form">
-                            <form method="post" id="contactform" action="http://formspree.io/inglestonsam@gmail.com">
+                            <form method="post" id="contactform" action="https://www.formbackend.com/f/bagyh8ot">
                                 <div class="input-style">
                                     <div>
                                         <input type="text" id="name" name="name" placeholder="Name">
@@ -432,10 +432,7 @@
                                     <textarea name="message" id="message" placeholder="Message"></textarea>
                                 </div>
                                 <input type="submit" id="submit" class="submit-style" name="submit" value="Send Message">
-                                <div class="submit-result"><!-- It will only appear after pushing submit button -->
-                                    <p id="success">Your Message has been sent!</p>
-                                    <p id="error">Something went wrong, go back and try again!</p>
-                                </div>
+                            
                             </form>
                         </div>
                         <!-- Contact Info -->
