--- a/index.html
+++ b/index.html
@@ -418,7 +418,15 @@
                 <div class="container">
                     <h2 class="section-title">Get In Touch</h2>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6 contact-form">
+                        <div class="col-xs-12 col-sm-6 contact-form"> <form action="https://www.formbackend.com/f/bagyh8ot" method="post">
+    <label>Name</label>
+    <input type="text" name="name">
+
+    <label>Email</label>
+    <input type="email" name="email">
+
+    <button type="submit">Submit form</button>
+  </form">
                             <form method="post" id="contactform" action="https://www.formbackend.com/f/bagyh8ot">
                                 <div class="input-style">
                                     <div>
