--- a/index.html
+++ b/index.html
@@ -418,16 +418,8 @@
                 <div class="container">
                     <h2 class="section-title">Get In Touch</h2>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6 contact-form"> <form action="https://www.formbackend.com/f/bagyh8ot" method="post">
-    <label>Name</label>
-    <input type="text" name="name">
-
-    <label>Email</label>
-    <input type="email" name="email">
-
-    <button type="submit">Submit form</button>
-  </form">
-                            <form method="post" id="contactform" action="https://www.formbackend.com/f/bagyh8ot">
+                        <div class="col-xs-12 col-sm-6 contact-form"> 
+                            <form method="post" id="contactform" action="action="http://formspree.io/inglestonsam@gmail.com">
                                 <div class="input-style">
                                     <div>
                                         <input type="text" id="name" name="name" placeholder="Name">
