--- a/index.html
+++ b/index.html
@@ -418,7 +418,12 @@
                 <div class="container">
                     <h2 class="section-title">Get In Touch</h2>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6 contact-form"> 
+                        <div class="col-xs-12 col-sm-6 contact-form"> <form method="POST" action="http://formspree.io/inglestonsam@gmail.com">
+  <input type="name" name="name" placeholder="Name">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
+</form>
                             <form method="post" id="contactform" action="action="http://formspree.io/inglestonsam@gmail.com">
                                 <div class="input-style">
                                     <div>
