--- a/index.html
+++ b/index.html
@@ -419,12 +419,14 @@
                     <h2 class="section-title">Get In Touch</h2>
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 contact-form"> <form method="POST" action="http://formspree.io/inglestonsam@gmail.com">
-  <input type="name" name="name" placeholder="Name">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
+                                  <div class="input-style">
+<input type="name" name="name" placeholder="Name" id="name">
+                                      <input type="email" name="email" placeholder="E-mail" id="email"></div>
+                            <div class="text-style">
+                                <textarea name="message" placeholder="Message" id="message"></textarea></div>
+  <button type="submit" id="submit" class="submit-style" name="submit">Send</button>
 </form>
-                            <form method="post" id="contactform" action="action="http://formspree.io/inglestonsam@gmail.com">
+                            <form method="POST" id="contactform" action="action="http://formspree.io/inglestonsam@gmail.com">
                                 <div class="input-style">
                                     <div>
                                         <input type="text" id="name" name="name" placeholder="Name">
