--- a/index.html
+++ b/index.html
@@ -419,28 +419,14 @@
                     <h2 class="section-title">Get In Touch</h2>
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 contact-form"> <form method="POST" action="http://formspree.io/inglestonsam@gmail.com">
-                                  <div class="input-style">
-<input type="name" name="name" placeholder="Name" id="name">
-                                      <input type="email" name="email" placeholder="E-mail" id="email"></div>
+                                  <div class="input-style"><div>
+                                      <input type="name" name="name" placeholder="Name" id="name"></div>
+                                     <div> <input type="email" name="email" placeholder="E-mail" id="email"></div></div>
                             <div class="text-style">
-                                <textarea name="message" placeholder="Message" id="message"></textarea></div>
+                                <div><textarea name="message" placeholder="Message" id="message"></textarea></div></div>
   <button type="submit" id="submit" class="submit-style" name="submit">Send</button>
 </form>
-                            <form method="POST" id="contactform" action="action="http://formspree.io/inglestonsam@gmail.com">
-                                <div class="input-style">
-                                    <div>
-                                        <input type="text" id="name" name="name" placeholder="Name">
-                                    </div>
-                                    <div>
-                                        <input type="email" id="email" name="email" placeholder="E-Mail">
-                                    </div>
-                                </div>
-                                <div class="text-style">
-                                    <textarea name="message" id="message" placeholder="Message"></textarea>
-                                </div>
-                                <input type="submit" id="submit" class="submit-style" name="submit" value="Send Message">
-                            
-                            </form>
+                          
                         </div>
                         <!-- Contact Info -->
                         <div class="col-xs-12 col-sm-6 contact-info">
