Updated testimonials career jobs

--- a/index.html
+++ b/index.html
@@ -389,19 +389,19 @@
                         <div id="testimonialSlider" class="owl-carousel">
                             <!-- Testimonial box 1 -->
                             <div class="testimonial-box">
-                                <h4>Ahmed Omer</h4>
+                                <h4>Ahmed Omer, Senior Marketing Manager - Level Up Media</h4>
                                 <i class="fa fa-quote-right"></i>
                                 <p>Sam was great to work with at Infectious Media, he's a fast learner, great with technology and is extremely thorough with everything he does. His passion and enthusiasm for marketing made him a great asset to the team.</p>
                             </div>
                             <!-- Testimonial box 2 -->
                             <div class="testimonial-box">
-                                <h4>Ashley Nye</h4>
+                                <h4>Ashley Nye - Developer, Electric Putty Digital</h4>
                                 <i class="fa fa-quote-right"></i>
                                 <p>Sam is not only hard-working and passionate about digital media, he has talent to back up his work. Everything he produces is always incredibly professional, and on many occasions I've been wowed by his creativity.</p>
                             </div>
                             <!-- Testimonial box 3 -->
                             <div class="testimonial-box">
-                                <h4>Neil McKinnon</h4>
+                                <h4>Neil McKinnon - Head of Marketing, Infectious Media</h4>
                                 <i class="fa fa-quote-right"></i>
                                 <p>Sam is dedicated, hardworking and willing to take on any challenge. He quickly became an important part of the team, providing value in research, design and implementation of many of our marketing tactics. He really is a pleasure to work with, friendly, easy going and not overawed when working with senior management.</p>
                             </div><!-- end Testimonial box 3 -->
