--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         <div id="testimonialSlider" class="owl-carousel">
                             <!-- Testimonial box 1 -->
                             <div class="testimonial-box">
-                                <h4>Ahmed Omer, Senior Marketing Manager - Level Up Media</h4>
+                                <h4>Ahmed Omer - Senior Marketing Manager, Level Up Media</h4>
                                 <i class="fa fa-quote-right"></i>
                                 <p>Sam was great to work with at Infectious Media, he's a fast learner, great with technology and is extremely thorough with everything he does. His passion and enthusiasm for marketing made him a great asset to the team.</p>
                             </div>
