--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Sam Ingleston Portfolio</title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="images/favicon.png">
+        <link rel="shortcut icon" href="images/favicon1.png">
         <!-- ##### STYLESHEETS ##### -->
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,8 +117,8 @@
                     <div class="portfolio-filter">
                         <ul>
                             <li class="filter" data-filter="all">all</li>
-                            <li class="filter" data-filter=".category-1">Desktop</li>
-                            <li class="filter" data-filter=".category-2">Mobile</li>
+                            <li class="filter" data-filter=".category-1">Marketing</li>
+                            <li class="filter" data-filter=".category-2">Website</li>
                             <li class="filter" data-filter=".category-3">Email</li>
                         </ul>
                     </div>
@@ -126,7 +126,7 @@
                     <div id="mix-container">
                         <div class="row">
                             <!-- Portfolio box 1 -->
-                            <div class="col-xs-12 col-md-6 mix category-1">
+                            <div class="col-xs-12 col-md-6 mix category-2">
                                 <div class="portfolio-box">
                                     <img src="images/portfolio-img-1--.jpg" alt=""><!-- Image source -->
                                     <div class="portfolio-box-content">
@@ -151,22 +151,22 @@
                             <!-- Portfolio box 2 -->
                             <div class="col-xs-12 col-md-6 mix category-2">
                                 <div class="portfolio-box">
-                                    <img src="images/portfolio-img-2-.jpg" alt="Mobile"><!-- Image source -->
+                                    <img src="images/portfolio-img-2_.jpg" alt="Mobile"><!-- Image source -->
                                     <div class="portfolio-box-content">
                                         <a class="lightbox" href="#popup-2"><!-- link to popup -->
                                             <div class="portfolio-content-title">
-                                                <h4>Louise Carter Hair & Makeup</h4>
-                                                <span>Complete Digital Package</span>
+                                                <h4>Sam Snow Design</h4>
+                                                <span>Website</span>
                                             </div>
                                         </a>
                                     </div>
                                 </div>
                                 <!-- popup content -->
                                 <div id="popup-2" class="mfp-hide popup-box">
-                                    <img src="images/portfolio-img-2-.jpg" alt="Mobile pop up"><!-- Image source -->
+                                    <img src="images/portfolio-img-2_.jpg" alt="Mobile pop up"><!-- Image source -->
                                     <div>
-                                        <h4>Louise Carter Hair & Makeup</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
+                                        <h4>Sam Snow Design</h4>
+                                        <p>Currently in development, a new clean, contemporary website for Samantha Snow, an aspiring fashion and jewellery designer from Kent. </p>
                                     </div>
                                 </div>
                                 <!-- end popup content -->
@@ -189,7 +189,7 @@
                                     <img src="images/portfolio-img-3-.jpg" alt="desktop pop up"><!-- Image source -->
                                     <div>
                                         <h4>Complete Digital Package</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
+                                        <p>Created a online strategy for a freelance hairstylist and semi-permanent makeup artist. It was the complete digital marketing package which included a new CMS website with custom coding, branding, social media strategy, content strategy, and SEO with an analytical campaign and usability testing. </p>
                                     </div>
                                 </div>
                                 <!-- end popup content -->
@@ -212,7 +212,7 @@
                                     <img src="images/portfolio-img-4-.jpg" alt="email pop up"><!-- Image source -->
                                     <div>
                                         <h4>Eurotunnel Confirmations</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
+                                        <p>In charge of all Eurotunnel Le Shuttle email communications. This project was redesigning and then developing new email confirmations for our customers. This simplified the process and made the design a lot more user friendly.</p>
                                     </div>
                                 </div>
                                 <!-- end popup content -->
