--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <!-- Services box 2 -->
                         <div class="col-xs-12 col-sm-4 services-box">
                             <div>
-                                <i class="icon icon-basic-photo"></i>
+                                <i class="icon icon-basic-pencil-ruler"></i>
                                 <h4>UX Design
                         </h4>
                             </div>
